--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@ant-design/plots": "^2.3.2",
     "@aws-sdk/client-athena": "^3.716.0",
+    "@aws-sdk/client-s3": "^3.730.0",
+    "@aws-sdk/s3-request-presigner": "^3.730.0",
+    "@azure/storage-blob": "^12.26.0",
     "antd": "^5.22.3",
     "axios": "^1.7.9",
     "cra-template-typescript": "1.2.0",
