--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
+    "string-similarity": "^4.0.4",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
