--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "antd": "^5.22.3",
     "axios": "^1.7.9",
     "cra-template-typescript": "1.2.0",
+    "dagre": "^0.8.5",
     "react": "^18.0.0",
     "react-ace": "^13.0.0",
     "react-dom": "^18.0.0",
+    "react-flow-renderer": "^10.3.17",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "string-similarity": "^4.0.4",
